# CacheMeIfYouCan

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  bfs.hpp  compile_flags.txt  main.cpp  main.out
Speedcode/: download_datasets.sh
datasets/: USpowergrid_n4941.txt  random_1k_5k.txt  test.txt
gapbs/: Makefile
gapbs/src/: benchmark.h
include/: benchmark.hpp  bfs.hpp  bfs_cached.hpp  bfs_hybrid_bitmap.hpp  complete.hpp  complete_nomerged.hpp  graph.hpp  parents.hpp  profiling.hpp  reference.hpp  semaphore.hpp  test_openmp.hpp
schemas/: kmer.json  test.json
scripts/: analysis.ipynb  analysis_balancing.ipynb  analysis_datasets.ipynb  analysis_profiling.ipynb  analysis_profiling_likwid.ipynb  analysis_profiling_perf.ipynb  analysis_runtime.ipynb  download_datasets.sh  run_benchmarks.sh  run_likwid_profiling.sh  run_on_all_datasets.sh  run_runtime_tests.leonardo.slurm  run_runtime_tests.pbs  run_runtime_tests.sh  to_undirected.py
src/: benchmark.cpp  benchmark.hpp  bfs.cpp  bfs.hpp  bfs_cached.cpp  bfs_cached_bitmap.cpp  bfs_hybrid_bitmap.cpp  bfs_tasked.cpp  bitmap.cpp  classic.cpp  complete.cpp  complete_nomerged.cpp  expelligrafus.cpp  graph.cpp  input.hpp  inputschema.cpp  main.cpp  main_reference.cpp  main_speedcode.cpp  merged_csr.cpp  merged_csr_parents.cpp  parents.cpp  reference.cpp  test_degree.cpp  test_openmp.cpp  utils.hpp
src/implementations/: bitmap.cpp  classic.cpp  merged_csr.cpp  merged_csr_1.cpp  merged_csr_parents.cpp  reference.cpp
src/old/: bfs_bitmap.cpp  bfs_cached_bitmap.cpp  bfs_hybrid_bitmap.cpp
src/utils/: count_leaves.cpp  expelligrafus.cpp  generate_sources.cpp  test_degree.cpp
tests/: CMakeLists.txt  run_all.cpp
utils/: test.sh  test_all.sh  to_undirected.py
yaml_files/: jobs_baldo.yaml
